Made the input fields inactive and adjusted input text field to 14px for better alignment. Also fixed a bug in the line chart color file

--- a/app/css/keywords_publishers.scss
+++ b/app/css/keywords_publishers.scss
@@ -24,14 +24,27 @@ h5 {
 }
 
 .keyword-list-item {
-   input {
+  input {
     width: 100%;
+    background-color: #FFF !important;
+    font-size: 14px;
   }
+
+  input:hover{
+    cursor: auto;
+  }
+
 }
 
 .publisher-list-item {
    input {
     width: 100%;
+    background-color: #FFF !important;
+    font-size: 14px;
+  }
+
+  input:hover{
+    cursor: auto;
   }
 }
 
